--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <script type="module" src="index.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+
 
   <title>Novinky</title>
 </head>
@@ -36,6 +36,8 @@
       <div class="skill__value">50 / 100</div>
     </div>
   </div>
+
+  <script src="index.js"></script> 
 </body>
 
 </html>
